<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_variant_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/signUpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/sign_up_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/signUpFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/toLoginLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpTitle">

        <TextView
            android:id="@+id/nicknameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/nicknameEditText"
            android:text="@string/nickname_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nicknameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:backgroundTint="@color/white"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/nickname_hint"
            android:textColorHint="@color/purple_200"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/emailLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/emailEditText"
            android:text="@string/email_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/white"
            android:hint="@string/email_edit_text_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textColorHint="@color/purple_200" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/passwordEditText"
            android:text="@string/password_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/main_color"
            android:text="@string/sign_up_title" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/toLoginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUpFields">

        <TextView
            android:id="@+id/loginDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_description"
            android:textColor="@color/white" />

        <TextView
            android:layout_marginStart="3dp"
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_title"
            android:textColor="@color/purple_200" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>